extracted controllers to its own files and updated api doc
