# controllers/userType.controller.js
@@ -1,0 +1,25 @@
+import Joi from "joi";
+import { UserType, validate } from "../models/userType.model.js";
+
+const validateUserType = (req) => validate(req);
+
+export const getUserTypes = async (req, res) => {
+  const types = await UserType.find().select("_id name");
+  res.send(types);
+};
+
+export const createUserType = async (req, res) => {
+  const { error } = validateUserType(req.body);
+  if (error) return res.status(400).send(error.details[0].message);
+
+  const name = req.body.name.toLowerCase();
+  let type = await UserType.findOne({ name });
+  if (type) return res.status(400).send("The user type already exists");
+
+  type = new UserType({
+    name: req.body.name,
+  });
+
+  await type.save();
+  res.send(type);
+};
